# invenio-employee-profiles

./: MANIFEST.in  run-tests.sh  setup.cfg  setup.py
.tx/: config
docs/: conf.py  usage.rst
invenio_employee_profiles/: __init__.py  ext.py  proxies.py
invenio_employee_profiles/records/: api.py  models.py
invenio_employee_profiles/records/mappings/os-v2/invenio_employee_profiles/: employee-profile-v1.0.0.json
invenio_employee_profiles/resources/: __init__.py  config.py  resource.py
invenio_employee_profiles/services/: __init__.py  components.py  config.py  permissions.py  schema.py  service.py
invenio_employee_profiles/views/: api.py
invenio_profiles/: __init__.py  ext.py  models.py  proxies.py
invenio_profiles/alembic/: 512bb8ae048c_setup_of_employee_profiles.py  adf82b864267_create_employee_profiles_table.py
invenio_profiles/resources/: __init__.py
invenio_profiles/resources/employee_profile/: config.py  resource.py
invenio_profiles/services/: __init__.py
invenio_profiles/services/employee_profile/: __init__.py  config.py  errors.py  permissions.py  results.py  service.py
tests/: conftest.py  test_01_db_layer.py  test_02_record_layer.py  test_03_service_layer.py  test_04_resource_layer.py  test_invenio_profiles.py  test_service.py
tests/resources/: test_resource.py
