# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2021      TU Wien.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-employee-profiles
version = attr: invenio_employee_profiles.__version__
description = blah
long_description = file: README.rst, CHANGES.rst
keywords = invenio employee profiles
license = MIT
author = ubiquitypress
author_email = jacob.collins@ubiquitypress
platforms = any
url = https://github.com/inveniosoftware/invenio-profiles
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.16.0
    flask-resources>=1.0.0,<2.0.0
    invenio-accounts>=5.0.0,<6.0.0
    invenio-users-resources>=5.0.0,<6.0.0
    invenio-records-permissions>=0.18.0,<1.0.0
    invenio-i18n>=2.0.0,<3.0.0
    jsonpatch>=1.26
    jsonref>=0.2
    jsonresolver>=0.3.1
    jsonschema>=4.3.0,<5.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    invenio-admin>=1.4.0,<2.0.0
    invenio-access>=2.0.0,<3.0.0
    invenio-app>=1.4.0,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
mysql =
    invenio-db[mysql,versioning]>=1.0.14,<2.0.0
postgresql =
    invenio-db[postgresql,versioning]>=1.0.14,<2.0.0
sqlite =
    invenio-db[versioning]>=1.0.14,<2.0.0
docs =
    # Kept for backwards compatibility
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0
[options.entry_points]
invenio_base.apps =
    invenio_employee_profiles = invenio_employee_profiles.ext:EmployeeProfileExtension
invenio_base.api_apps =
    invenio_employee_profiles = invenio_employee_profiles.ext:EmployeeProfileExtension
invenio_db.alembic =
    invenio_employee_profiles = invenio_employee_profiles:alembic
invenio_db.models =
    invenio_employee_profiles = invenio_employee_profiles.records.models
invenio_search.mappings =
    invenio_employee_profiles = invenio_employee_profiles.records.mappings
invenio_base.api_blueprints =
    invenio_employee_profiles = invenio_employee_profiles.views.api:create_blueprint

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
;addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_profiles --cov-report=term-missing
;testpaths = tests invenio_profiles
